Menu, Barra de pesquisa, conserto de bugs
Menu incompleto (responsividade)

--- a/flor/src/pages/Menu/Menu.css
+++ b/flor/src/pages/Menu/Menu.css
@@ -1,5 +1,5 @@
 .lista{
-    width:15vw;
+    width:10rem;
 }
 
 .listItemText{
@@ -7,13 +7,33 @@
 }
 
 .logo{
-    max-width:200px;
-    max-height:100px;
-    width: auto;
-    height: auto;
-    margin-left: -5px;
+    display:flex;
+    margin-left: 0px;
+    background-color: "#F2E635";
+    width: 8rem;
+}
+.barraPesquisa{
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 5px;
 }
 
-.search{
-    margin-left: -30;
+.userContainer{
+    display:flex; 
+    margin-left: auto;
+    align-items: center;
+    background-color: #f3dc01;
+}
+
+.userName{
+    margin: 0;
+    margin-right: auto;
+    font-size: 1.1rem;
+}
+
+.carrinho{
+    width: 2rem;
+    color: black;
 }
