--- a/flor/src/pages/Cadastro/Cadastro.css
+++ b/flor/src/pages/Cadastro/Cadastro.css
@@ -1,69 +1,80 @@
-.containe {
+.containeCad {
     display: flex;
     flex-direction: column;
     border: 2px solid #f3dc01;
     border-radius: 10px;
-    max-width: 450px;
     background-color: #f3dc01;
     box-shadow: 10px 5px 5px #A9A9A9;
-    margin: 10px;
+    margin: 5px;
     padding: 10px;
     padding-top: 0px;
     margin-top: 0px;
+
 }
 
-.containe2{
+.containe2Cad{
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    max-width: 450px;
     padding: 10px;
     padding-bottom: 0px;
-    margin-bottom: 0px;;
-    margin-top: auto;
+    margin-bottom: 0px;
+
 }
 
-img {
+.imgCad {
  
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+
   }
 
 
 .baseCad {
     display: flex;
     width: 100%;
+
     align-items: center;
     justify-content: center;
-    margin-top: 0px;
     border: 2px;
     flex-direction: column;
-    
+
 }
 
-.inputs {
+.inputsCad {
     display: flex;
     flex-direction: column;
     margin-left:15px;
     margin-right: 15px;
 }
 
-.meio {
+.meioCad {
     display: flex;
     justify-content: center;
     align-self: center;
 }
 
-.linha{
+.linhaCad{
     width: 100%;
     border: 1px dashed whitesmoke;
 }
 
 
-.col{
+.colCad{
     background-color: white;
     width: 100%;
     text-align: center;
     border-bottom-style: none;
+}
+
+@media (max-width:550px){
+    .imgCad{
+        width:0px;
+    }
+}
+
+@media(max-width:1024px){
+    .baseCad{
+        height: 100%;
+    }
 }
