--- a/flor/src/pages/Home/Home.css
+++ b/flor/src/pages/Home/Home.css
@@ -1,6 +1,5 @@
 .keeps {
     display: flex;
-    flex-direction: line;
     align-self: center;
     background-color:  #f3dc01;
     border-radius: 10px;
@@ -17,7 +16,7 @@
     margin: 10px;
     padding: 10px;
     background-color: #A9A9A9;
-    width: '50rem';
+    
   }
   .keeps3{
     display:flex;
@@ -32,6 +31,7 @@
   .conteiner{
     display: flex;
     flex-direction: row;
+    flex-wrap: unset;
 
   }
   .keeps4 {
@@ -44,4 +44,9 @@
     box-shadow: 5px 5px 5px #A9A9A9;
     margin: 10px;
     padding: 10px;
+  }
+  @media (max-width:710px){
+    .conteiner{
+      flex-wrap: wrap;
+    }
   }
