--- a/flor/src/pages/Login/Login.css
+++ b/flor/src/pages/Login/Login.css
@@ -9,6 +9,7 @@
     padding: 10px;
     padding-top: 0px;
     margin-top: 0px;
+   
 }
 
 .imgLog {
@@ -25,6 +26,9 @@
     padding: 10px;
     padding-bottom: 0px;
     margin-bottom: 0px;
+    
+
+    
 }
 
 
@@ -36,6 +40,7 @@
     justify-content: center;
     border: 2px;
     flex-direction: column;
+    flex-grow: 1;
 }
 
 .inputsLog {
