--- a/flor/src/pages/Home/Home.css
+++ b/flor/src/pages/Home/Home.css
@@ -1,52 +1,77 @@
 .keeps {
-    display: flex;
-    align-self: center;
-    background-color:  #f3dc01;
-    border-radius: 10px;
-    width:70%;
-    box-shadow: 5px 5px 5px #A9A9A9;
-    margin: 10px;
-    padding: 10px;
-  }
-  .keeps2{
-    display:flex;
-    flex-direction: line;
-    margin-right: auto ;
-    width:30%;
-    margin: 10px;
-    padding: 10px;
-    background-color: #A9A9A9;
-    
-  }
-  .keeps3{
-    display:flex;
-    flex-direction: line;
-    margin-right: auto ;
-    
-    margin: 10px;
-    padding: 10px;
-    background-color: #A9A9A9;
-    width: '50rem';
-  }
-  .conteiner{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: unset;
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  align-items: center;
+  background-color:  #f3dc01;
+  border-radius: 10px;
+  box-shadow: 0.3rem 0.3rem 0.3rem #D9D9D9;
+  padding: 0.8rem;
+  width:100%;
+  height: 100%;
+  min-height: 8rem;
 
-  }
-  .keeps4 {
-    display: flex;
-    flex-direction: row;
-    align-self: center;
-    height: 20%;
-    background-color:  #f3dc01;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px #A9A9A9;
-    margin: 10px;
-    padding: 10px;
-  }
-  @media (max-width:710px){
-    .conteiner{
-      flex-wrap: wrap;
-    }
-  }
+
+}
+.keeps2{
+  display:flex;
+  flex-direction: line;
+  margin-right: auto ;
+  margin: 10px;
+  padding: 10px;
+  background-color:#D9D9D9;
+  text-align: justify;
+}
+.keeps3{
+  display:flex;
+  flex-direction: line;
+  margin-right: auto ; 
+  margin: 10px;
+  padding: 10px;
+  background-color:#D9D9D9;
+  text-align:justify;
+}
+.conteiner{
+  flex-direction: column;
+
+}
+.keeps4 {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  background-color:  #f3dc01;
+  border-radius: 10px;
+  box-shadow: 0.3rem 0.3rem 0.3rem #D9D9D9;
+  margin: 0.8rem;
+  padding: 0.8rem;
+}
+.keeps5 {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  background-color:  #f3dc01;
+  border-radius: 10px;
+  box-shadow: 0.3rem 0.3rem 0.3rem #D9D9D9;
+  margin: 0.8rem;
+  padding: 0.8rem;
+}
+.keeps6 {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  background-color:  #f3dc01;
+  border-radius: 10px;
+  box-shadow: 0.3rem 0.3rem 0.3rem #D9D9D9;
+  margin: 0.8rem;
+  padding: 0.8rem;
+}
+.tudo{
+  display: flex;
+  flex-direction: column;
+}
+
+.imagehome{
+  display: flex;
+  width: 100%;
+
+}
