--- a/flor/src/pages/Barra/Barra.css
+++ b/flor/src/pages/Barra/Barra.css
@@ -19,6 +19,7 @@
 
 .barraPesquisa{
     display: flex;
+    flex-grow: 1;
     align-items: center;
     justify-self: center;
     background-color: white;
