--- a/flor/src/pages/Cadastro/Cadastro.css
+++ b/flor/src/pages/Cadastro/Cadastro.css
@@ -22,7 +22,7 @@
 
 }
 
-.imgCad {
+.imgCad{
  
     margin-left: auto;
     margin-right: auto;
@@ -33,7 +33,6 @@
 .baseCad {
     display: flex;
     width: 100%;
-    height: 100%;
     align-items: center;
     justify-content: center;
     border: 2px;
@@ -48,7 +47,7 @@
     margin-right: 15px;
 }
 
-.meioCad {
+.meioCad{
     display: flex;
     justify-content: center;
     align-self: center;
@@ -67,14 +66,20 @@
     border-bottom-style: none;
 }
 
-@media (max-width:550px){
-    .imgCad{
-        width:0px;
-    }
-}
-
 @media(max-width:1024px){
     .baseCad{
         height: 100%;
+    }
+}
+
+@media(max-height:1024px){
+    .imgCad{
+        width: 80%;
+    }
+}
+
+@media (max-width:550px){
+    .imgCad{
+        width:0px;
     }
 }
