--- a/flor/src/pages/Login/Login.css
+++ b/flor/src/pages/Login/Login.css
@@ -35,7 +35,6 @@
 .baseLog {
     display: flex;
     width: 100%;
-    height: 100%;
     align-items: center;
     justify-content: center;
     border: 2px;
@@ -70,8 +69,9 @@
 }
 
 @media (max-width:1024px){
-    .imgLog{
-        width:80%;
+    .baseLog{
+        width:100%;
         height: 100%;
     }
 }
+
