--- a/flor/src/pages/Cadastro/Cadastro.css
+++ b/flor/src/pages/Cadastro/Cadastro.css
@@ -33,6 +33,7 @@
 .baseCad {
     display: flex;
     width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     border: 2px;
