--- a/flor/src/pages/Login/Login.css
+++ b/flor/src/pages/Login/Login.css
@@ -35,6 +35,7 @@
 .baseLog {
     display: flex;
     width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     border: 2px;
@@ -69,9 +70,9 @@
 }
 
 @media (max-width:1024px){
-    .baseLog{
-        width:100%;
-        height: 100%;
+    .imgLog{
+        width:80%;
+        
     }
 }
 
