--- a/flor/src/pages/Home/Home.css
+++ b/flor/src/pages/Home/Home.css
@@ -10,9 +10,8 @@
   width:100%;
   height: 100%;
   min-height: 8rem;
-
-
 }
+
 .keeps2{
   display:flex;
   flex-direction: line;
@@ -22,6 +21,7 @@
   background-color:#D9D9D9;
   text-align: justify;
 }
+
 .keeps3{
   display:flex;
   flex-direction: line;
@@ -31,10 +31,11 @@
   background-color:#D9D9D9;
   text-align:justify;
 }
+
 .conteiner{
   flex-direction: column;
-
 }
+
 .keeps4 {
   display: flex;
   flex-direction: row;
@@ -44,30 +45,16 @@
   box-shadow: 0.3rem 0.3rem 0.3rem #D9D9D9;
   margin: 0.8rem;
   padding: 0.8rem;
+  max-height: 30rem;
+  max-width: 26rem;
 }
-.keeps5 {
-  display: flex;
-  flex-direction: row;
-  align-self: center;
-  background-color:  #f3dc01;
-  border-radius: 10px;
-  box-shadow: 0.3rem 0.3rem 0.3rem #D9D9D9;
-  margin: 0.8rem;
-  padding: 0.8rem;
-}
-.keeps6 {
-  display: flex;
-  flex-direction: row;
-  align-self: center;
-  background-color:  #f3dc01;
-  border-radius: 10px;
-  box-shadow: 0.3rem 0.3rem 0.3rem #D9D9D9;
-  margin: 0.8rem;
-  padding: 0.8rem;
-}
+
 .tudo{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-self: center;
+  justify-content: center;
 }
 
 .imagehome{
