Responsividade p/ monitores grandes 1600px

--- a/flor/src/pages/Login/Login.css
+++ b/flor/src/pages/Login/Login.css
@@ -69,10 +69,14 @@
     border-bottom-style: none;
 }
 
+@media (max-width:1600px){
+    .imgLog{
+        width:90%;
+    }
+}
 @media (max-width:1024px){
     .imgLog{
-        width:80%;
-        
+        width:80%;     
     }
 }
 
