--- a/flor/src/pages/Lista/Lista.css
+++ b/flor/src/pages/Lista/Lista.css
@@ -1,35 +1,36 @@
 .titulo {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    max-width: 76rem;
+    align-items: center;
     margin-top: 3rem;
-    margin-left: 8rem;
-    margin-right: 6rem;
+    margin-left: 4rem;
+    margin-right: 4rem;
     border-radius: 0.3rem;
     box-shadow: 0.1rem 0.1rem 0.1rem #aaaaaa;
     background-color: #EDEDED
+}
+
+.ContainerList{
+    width: 100%;
+    display:flex;
+    margin-left:0;
+    margin-right: 0;
 }
 
 .promoções {
     display: flex;
     flex-direction: row;
     align-items: center;
-    max-width: 100rem;
     margin-top: 2rem;
     margin-bottom: 1rem;
-    margin-left: 8rem;
 }
 
-.base{
+.baseList{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     margin-left: 1rem;
-    margin-bottom: 7rem;
-    max-width: 60.5rem;
-    max-height: 102.5rem;
-    min-width: 60.5rem;
+    align-self: center;
     border-radius: 0.3rem;
     box-shadow: 0.1rem 0.1rem 0.1rem #818181;
     background-color: #e9e9e9
@@ -42,21 +43,18 @@
     justify-content: flex-start;
     margin-left: 0.5rem;
     margin-bottom: 1rem;
-    max-width: 60rem;
-    max-height: 101rem;
-    min-width: 60rem;
+
+
 }
 
 .categorias{
     display: flex;
     flex-direction: column;
     height: 100%;
-    align-items: flex-start;    
+    align-items: flex-start;
+    margin-top:0;    
     width: 10rem;
-    max-width: 14rem;
-    min-width: 14rem;
-    max-height: 102rem;
-    margin-bottom: 14rem;
+    margin-bottom: auto;
     box-shadow: 0.1rem 0.1rem 0.1rem #818181;
     background-color: #e9e9e9
 }
@@ -65,16 +63,13 @@
     display: flex;
     flex-direction: row;
     height: 100%;
-    margin-left: 8rem;
-    margin-right: 6rem;
+    width:100%;
     margin-top: 4rem;
-    margin-bottom: 10rem;
-    max-height: 102rem;
-    min-height: 40rem;
 }
 
 .box{
     display: flex;
+    flex-wrap: wrap;
     box-shadow: 0.1rem 0.1rem 0.1rem #aaaaaa;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
@@ -88,7 +83,22 @@
     display: flex;
     width: 100%;
     height: 100%;
-    align-items: left;
     border: 2px;
     flex-direction: column;
+}
+
+.mr-2{
+    display:flex;
+    align-self: center;
+    margin-bottom: 5rem;
+}
+
+@media(max-width:430px){
+    .geral{
+        flex-direction:column;
+    }
+    .categorias{
+        width:100%;
+        align-items: center;
+    }
 }
