--- a/flor/src/pages/Lista/Lista.css
+++ b/flor/src/pages/Lista/Lista.css
@@ -6,7 +6,7 @@
     margin-left: 4rem;
     margin-right: 4rem;
     border-radius: 0.3rem;
-    box-shadow: 0.1rem 0.1rem 0.1rem #aaaaaa;
+    box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem #aaaaaa;
     background-color: #EDEDED
 }
 
@@ -19,10 +19,18 @@
 
 .promoções {
     display: flex;
+    position: relative;
     flex-direction: row;
     align-items: center;
     margin-top: 2rem;
     margin-bottom: 1rem;
+    margin-left:0;
+    margin-right:0;
+}
+
+.bolinhasList{
+    padding: 0;
+    align-self: center;
 }
 
 .baseList{
@@ -30,9 +38,10 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin-left: 1rem;
+    margin-right: 1rem;
     align-self: center;
     border-radius: 0.3rem;
-    box-shadow: 0.1rem 0.1rem 0.1rem #818181;
+    box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem #818181;
     background-color: #e9e9e9
 }
 
@@ -40,22 +49,24 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    margin-left: 0.5rem;
+    justify-content: center;
+    margin-top: 1rem;
     margin-bottom: 1rem;
-
+    align-self: center;
 
 }
 
 .categorias{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     height: 100%;
     align-items: flex-start;
     margin-top:0;    
     width: 10rem;
     margin-bottom: auto;
-    box-shadow: 0.1rem 0.1rem 0.1rem #818181;
+    box-shadow: 0.1rem  0.1rem 0.1rem  #818181;
+    border-radius: 0.3rem;
     background-color: #e9e9e9
 }
 
@@ -67,24 +78,25 @@
     margin-top: 4rem;
 }
 
-.box{
+.boxList{
     display: flex;
     flex-wrap: wrap;
+    align-self: center;
     box-shadow: 0.1rem 0.1rem 0.1rem #aaaaaa;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-    max-width: 14rem;
-    min-width: 14rem;
+    max-width: 15rem;
+
 }
 
 .incluiTodos{
     display: flex;
     width: 100%;
     height: 100%;
-    border: 2px;
     flex-direction: column;
+    background-color: #EDEDED;
 }
 
 .mr-2{
@@ -96,9 +108,22 @@
 @media(max-width:430px){
     .geral{
         flex-direction:column;
+        margin-top: 0;
     }
     .categorias{
-        width:100%;
+        width: max-content;
         align-items: center;
+    }
+    .baseList{
+        margin-top:1rem;
+    }
+}
+
+@media (max-width:320px){
+    .categorias{
+        font-size: 1rem;
+    }
+    .mr-2{
+        width:100%;
     }
 }
