--- a/flor/src/pages/Lista/Lista.css
+++ b/flor/src/pages/Lista/Lista.css
@@ -75,6 +75,12 @@
     height:17rem;
 }
 
+.modalList{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .boxListProd:hover{
     box-shadow:
     1px 1px #53a7ea,
