--- a/flor/src/pages/ProdutoModal/ProdutoModal.css
+++ b/flor/src/pages/ProdutoModal/ProdutoModal.css
@@ -1,51 +1,68 @@
 .modalContainer {
     width: 30rem;
-    height: 40rem;
+    height: 35rem;
     display: flex;
     flex-direction: column;
     padding: 20px;
     background-color: #fff;
     border-radius: 11px;
+    align-self:center;
+    justify-items:center;
   }
   
   .produtoModalTitle {
-    font-weight: 700;
+    font-weight: 500;
     text-transform: uppercase;
     align-self:center;
-    align-self:center;
-    font-size: 1rem;
+    font-size: 1.2rem;
     text-align: center;
+    margin-bottom:3px;
+    margin-top:-18px;
+  }
+
+  .linhaHModal{
+    width: 28rem;
+    border:1px solid;
+    align-self: center;
+    color:rgba(214, 213, 213, 0.63);
   }
   
 .imgModal{
     display:flex;
-    width:70%;
+    width:45%;
     align-self: center;
     justify-self: center;
+    background-color: rgba(255,255,255,0.0);
 }
-  .produtoModalDescription {
-    border-color: #dbdbdb;
-    border-style: solid;
-    border-width: 1.5px;
-    padding: 8px;
-    font-family: "Roboto", sans-serif;
+
+.carrinhoModal{
+  display:flex;
+  align-items: flex-start;
+  flex-direction: row;
+}
+
+.cancelarModal{
   
-  }
-  
-  .produtoModalDescription {
-    font-weight: 300;
-    font-size: 0.9rem;
-  
-    height: 40vh;
-    resize: none;
-    overflow: auto;
-    border-top: 0;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-  }
-  
-  .buttonsRow {
-    margin-top: 16px;
+  border-color: transparent;
+  background-color: rgba(65,137,230,.15);
+  color: #3483fa;
+
+}
+.textModal{
+  font-size: 1.08rem;
+  margin-bottom: 0px;
+}
+
+.buttonsRow {
     display: flex;
     justify-content: space-between;  
+}
+
+.comentarioModal{
+    font-weight: 300;
+    font-size: 0.9rem;
+    height: 4rem;
+    resize: none;
+    overflow: auto;
+    border-radius: 8px;
   }
