--- a/flor/src/pages/Lista/Lista.css
+++ b/flor/src/pages/Lista/Lista.css
@@ -61,6 +61,37 @@
 
 }
 
+.boxListProd{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    box-shadow: 0.1rem 0.1rem 0.1rem #aaaaaa;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    width: 13rem;
+    height:17rem;
+}
+
+.modalList{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size:cover;
+    opacity:"50%";
+}
+
+.boxListProd:hover{
+    box-shadow:
+    1px 1px #53a7ea,
+    2px 2px #53a7ea,
+    3px 3px #53a7ea;
+    -webkit-transform: translateX(-3px);
+    transform: translateX(-3px);
+}
+
 .categoriasList{
     display: flex;
     flex-direction: column;
@@ -79,19 +110,6 @@
     height: 100%;
     width:100%;
     margin-top: 4rem;
-}
-
-.boxList{
-    display: flex;
-    flex-wrap: wrap;
-    align-self: center;
-    box-shadow: 0.1rem 0.1rem 0.1rem #aaaaaa;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-    max-width: 15rem;
-
 }
 
 .incluiTodosList{
@@ -135,3 +153,4 @@
         margin-right: 2.8rem;
     }
 }
+
