--- a/flor/src/pages/components/ProdutoModal/ProdutoModal.css
+++ b/flor/src/pages/components/ProdutoModal/ProdutoModal.css
@@ -15,6 +15,9 @@
     justify-items:center;
     flex-direction:column;
     overflow:auto;
+    height: 100%;
+    
+  
   }
 
   .produtoModalTitle {
@@ -70,7 +73,7 @@
   flex-direction: column;
   width:100%;
   position:relative;
-  bottom:0;
+  margin-bottom:0;
 }
 
 .comentarioModal{
