--- a/flor/src/pages/Home/Home.css
+++ b/flor/src/pages/Home/Home.css
@@ -3,36 +3,35 @@
   flex-direction: row;
   align-self: center;
   align-items: center;
-  background-color:  #f3dc01;
-  box-shadow: 0.3rem 0.3rem 0.3rem #D9D9D9;
+  background-color: #f3dc01;
+  box-shadow: 0.3rem 0.3rem 0.3rem #d9d9d9;
   padding: 0.8rem;
-  width:100%;
+  width: 100%;
   height: 100%;
   min-height: 8rem;
-
 }
 
-.keeps2Home{
-  display:flex;
+.keeps2Home {
+  display: flex;
   flex-direction: line;
-  margin-right: auto ;
+  margin-right: auto;
   margin: 10px;
   padding: 10px;
-  background-color:#D9D9D9;
+  background-color: #d9d9d9;
   text-align: justify;
 }
 
-.keeps3Home{
-  display:flex;
+.keeps3Home {
+  display: flex;
   flex-direction: line;
-  margin-right: auto ; 
+  margin-right: auto;
   margin: 10px;
   padding: 10px;
-  background-color:#D9D9D9;
-  text-align:justify;
+  background-color: #d9d9d9;
+  text-align: justify;
 }
 
-.conteinerHome{
+.conteinerHome {
   flex-direction: column;
 }
 
@@ -40,16 +39,16 @@
   display: flex;
   flex-direction: row;
   align-self: center;
-  background-color:  #f3dc01;
+  background-color: #f3dc01;
   border-radius: 10px;
-  box-shadow: 0.3rem 0.3rem 0.3rem #D9D9D9;
+  box-shadow: 0.3rem 0.3rem 0.3rem #d9d9d9;
   margin: 0.8rem;
   padding: 0.8rem;
   max-height: 30rem;
   max-width: 26rem;
 }
 
-.tudoHome{
+.tudoHome {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -57,11 +56,50 @@
   justify-content: center;
 }
 
-.imagehome{
+.imagehome {
   display: flex;
   width: 100%;
 }
 
-.TitleHome{
+.TitleHome {
   align-self: center;
+}
+.botaoComentario {
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  
+  padding: 5px;
+  border-radius: 7px;
+}
+.CardComentarioHome {
+   display: flex;
+  
+    width: 27rem;
+    height: 33rem;
+  
+    border-radius: 8px;
+    flex-wrap: row;
+    background-color: rgb(160, 160, 160);
+  
+}
+.inputCard {
+  display: flex;
+  width: 100%;
+  
+  
+  font-weight: 500;
+  font-size: 1.2rem;
+  align-self: center;
+  border-radius: 8px;
+  justify-content: center;
+ 
+  
+}
+.buttonsRowHome{
+  
+  display: flex;
+  justify-content: space-between; 
+  margin-top: auto;
+
 }
