--- a/flor/src/pages/components/Produto/Produto.css
+++ b/flor/src/pages/components/Produto/Produto.css
@@ -1,7 +1,8 @@
 .countainerProd{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
+    flex-grow: 1;
     margin-left: 1rem;
     margin-right: 1rem;
     align-self: center;
@@ -32,7 +33,11 @@
     -webkit-transform: translateX(-3px);
     transform: translateX(-3px);
 }
-
+.listProd{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 
 .elementosProd{
     display: flex;
