--- a/flor/src/pages/Cadastro/Cadastro.css
+++ b/flor/src/pages/Cadastro/Cadastro.css
@@ -11,6 +11,14 @@
 
 }
 
+.voltarCad{
+    align-self: flex-start;
+    background-color:#f3dc01;
+    margin:15px;
+    border:10px;
+    border-radius: 2.5em;
+}
+
 .containe2Cad{
     display: flex;
     flex-direction: column;
@@ -71,6 +79,9 @@
     .imgCad{
         width: 90%;
     }
+    .voltarCad{
+        margin-top:60px;
+    }
 }
 
 @media(max-height:700px){
@@ -80,6 +91,9 @@
     .baseCad{
         height:auto;
     }
+    .voltarCad{
+        margin-top:60px;
+    }
 }
 
 @media (max-width:550px){
@@ -88,5 +102,8 @@
     }
     .baseCad{
         height: 100%;
+    }
+    .voltarCad{
+        margin-top:60px;
     }
 }
