--- a/flor/src/pages/Login/Login.css
+++ b/flor/src/pages/Login/Login.css
@@ -11,6 +11,16 @@
    
 }
 
+
+
+.voltarLog{
+    align-self: flex-start;
+    background-color:#f3dc01;
+    margin:15px;
+
+    border-radius: 2.5rem;
+}
+
 .imgLog {
  
     margin-left: auto;
@@ -26,20 +36,19 @@
     padding-bottom: 0px;
     margin-bottom: 0px;
     
-
-    
 }
 
 
 .baseLog {
     display: flex;
+    position:absolute;
+    top:0;
     width: 100%;
-    height: 100%;
     align-items: center;
     justify-content: center;
     border: 2px;
     flex-direction: column;
-    flex-grow: 1;
+    
 }
 
 .inputsLog {
@@ -72,15 +81,21 @@
     .imgLog{
         width:90%;
     }
+
 }
 @media (max-width:1024px){
     .imgLog{
         width:80%;     
     }
+    .baseLog{
+        height: 100%;
+    }
+
 }
 
 @media (max-height:700px){
     .imgLog{
         width:55%;
     }
+
 }
