--- a/flor/src/pages/components/Produto/Produto.css
+++ b/flor/src/pages/components/Produto/Produto.css
@@ -1,11 +1,12 @@
 .countainerProd{
-    display: flex;
+    display:  flex;
     flex-direction: column;
     flex-wrap: wrap;
     flex-grow: 1;
     margin-left: 1rem;
     margin-right: 1rem;
     align-self: center;
+
     border-radius: 0.3rem;
     box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem #818181;
     background-color: #e9e9e9;
@@ -33,10 +34,15 @@
     -webkit-transform: translateX(-3px);
     transform: translateX(-3px);
 }
+
+
 .listProd{
     display:flex;
+    width:100%;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .elementosProd{
