Criação Modal Troca de Senha (Login) + Campos trocar senha (Perfil)

--- a/flor/src/pages/Login/Login.css
+++ b/flor/src/pages/Login/Login.css
@@ -76,6 +76,12 @@
     text-align: center;
     border-bottom-style: none;
 }
+.botaoSenhaLog{
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    align-items:center;
+}
 
 @media (max-width:1600px){
     .imgLog{
