--- a/flor/src/pages/Barra/Barra.css
+++ b/flor/src/pages/Barra/Barra.css
@@ -13,6 +13,22 @@
     border:1px solid;
     color:rgb(204, 200, 200);
   }
+  .descricaoProdBar{
+      display:flex;
+      flex-direction: column;
+  }
+  .imgCarBar{
+      display:block;
+      width:15%;
+  }
+  .textItemBar{
+    display:flex;
+    word-wrap:normal;
+    margin-left:1rem;
+    margin-bottom:-3px;
+    width:100%;
+
+  }
 .logoBarra{
     display:flex;
     flex-grow: 1;
