--- a/flor/src/pages/Barra/Barra.css
+++ b/flor/src/pages/Barra/Barra.css
@@ -18,8 +18,7 @@
       flex-direction: column;
   }
   .imgCarBar{
-      display:block;
-      width:15%;
+      width:5rem;
   }
   .textItemBar{
     display:flex;
@@ -29,6 +28,7 @@
     width:100%;
 
   }
+
 .logoBarra{
     display:flex;
     flex-grow: 1;
@@ -70,6 +70,12 @@
     font-size: 1.1rem;
 
 }
+.drawerBar{
+    overflow:auto;
+    max-Width:30rem;
+    background-color: #e9e9e9;
+    height:100%;
+}
 
 .carrinhoBarra{
     width: 2rem;
@@ -93,5 +99,19 @@
     .logoBarra{
         min-width: 0px;
         width:0px;
+    }
+}
+
+@media(max-width:541px){
+    .drawerBar{
+        width:20rem
+    }
+}
+@media(max-width:359px){
+    .imgCarBar{
+        width:4.5rem;
+    }
+    .drawerBar{
+        width: 15rem;
     }
 }
